Sequent style has been checked and worked well so far